# prm

./: .env.local  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: postcreate.sh
app/: config.py  main.py
app/graph_repository/: crud.py  crud_country.py  database.py
app/routes/: country.py  person.py
app/schemas/: neo4j_schemas.py
src/: main.py
src/models/: person.py
src/repositories/graph/: gremlin.py
