[tool.poetry]
name = "prm"
version = "0.1.0"
description = ""
authors = ["Fernando Crozetta"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gremlinpython = "^3.6.2"
fastapi = "^0.109.1"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
